--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <!-- 包含的模块 -->
     <modules>
         <module>microservice-consumer-movie</module>
+        <module>microservice-consumer-movie-ribbon</module>
         <module>microservice-provider-user</module>
         <module>microservice-discovery-eureka</module>
     </modules>
